@@ -20,3 +20,6 @@
 
 	2017-12-03 Igor Tyukalov <tyukalov@bk.ru>
 	* Добавлена обработка дополнительного разделителя опции и значения, что позволяет реализовывать как конструкции типа ' --option value' так и '--option=value'.
+
+	2017-12-13 Igor Tyukalov <tyukalov@bk.ru>
+	* Исправлен небольшой баг и несколько изменён Makefile
